turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:41: error: not found: value couleurAMEttre
	setCouleurBrosse(colors(couleurAMEttre))
                                ^